--- a/static/index.html
+++ b/static/index.html
@@ -38,15 +38,27 @@
           
         <script type="text/javascript" src="wasm_gui.js"></script>
         <script>
+            if (window.Worker) {
+                var myWorker = new Worker("worker.js");
+            }
             function runGui() {
-                Rust.wasm_gui.then( function( wasmgui ) {
                     var chunks = document.getElementById('chunks').value;
                     var no_chunks = document.getElementById('no_chunks').value;
                     var outta = document.getElementById('output_textarea');
                     outta.value = "Calculating...";
-                    // TODO: check if a thread is already running and kill it
-                    outta.value = wasmgui.slime_seed_finder(chunks, no_chunks);
-                });
+                    if (window.Worker) {
+                        myWorker.postMessage({ chunks: chunks, no_chunks: no_chunks });
+                        console.log('Message posted to worker');
+                        myWorker.onmessage = function(e) {
+                            outta.value = e.data;
+                            console.log('Got message from worker');
+                        };
+                    } else {
+                        Rust.wasm_gui.then( function( wasmgui ) {
+                            // TODO: check if a thread is already running and kill it
+                            outta.value = wasmgui.slime_seed_finder(chunks, no_chunks);
+                        });
+                    }
             }
         </script>
     </body>
