--- a/static/index.html
+++ b/static/index.html
@@ -13,30 +13,38 @@
             textarea {
                 font-family: monospace;
             }
-            #chunks, #no_chunks, #output_textarea {
-                width: 30%;
-            }
-            #chunks {
-                background-color: #ded;
-            }
-            #no_chunks {
-                background-color: #edd;
-            }
         </style>
+        <script src="json-stringify-pretty-compact.js"></script>
+        <script src="common.js"></script>
+        <script src="select_map.js"></script>
     </head>
     <body>
-        <div>
+        <a href="https://github.com/Badel2/slime_seed_finder">SLIME SEED FINDER</a>
+        <strong>Under construction.</strong><br>
+        Click on the map to mark chunks as slime chunks, click again to mark as "non-slime" chunks, the coordinates are displayed below the map. You can zoom using the buttons below the map. To move, either drag the map or enter the desired chunk coordinate and click "CENTER". If you prefer, you can also write the chunk coordinates directly to the textarea on the right, in JSON format, and then click "LOAD JSON". Once you have marked all the chunks, click "RUN" to begin searching for the seed. It is very important to have enough slime chunks, as each slime chunk reduces the runtime by half. Ideally you want at most 60 * 2^30 candidates which will get you the seed candidates in around 7 minutes. "Non-slime" chunks don't reduce the runtime, but are needed to remove false candidates.
+        <div style="width: 100%;">
+        <div style="float: left; width: 50%;">
+            <canvas id="demo" width="512" height="512"></canvas>
+            <div id="position_info"></div>
+            <div>
+                <button onClick="Game.zoomBy(0.8)">ZOOM -</button>
+                <button onClick="Game.zoomBy(1.25)">ZOOM +</button>
+                <input id="center_x" size=2>
+                <input id="center_z" size=2>
+                <button id="center_button">CENTER</button>
+            </div>
+        </div>
+        <div style="float: right; width: 50%">
+          <textarea id="selection_output" class="code" rows="20" style="width: 45%;"></textarea>
+          <textarea id="output_textarea" class="code" rows="20" style="width: 45%;" readonly>Found 48-bit seeds will appear here.</textarea>
+          <textarea id="num_candidates" class="code" rows="1" readonly></textarea>
+          <button onClick="load_selection()">LOAD JSON</button>
+          <button onClick="countCandidates()">ESTIMATE RUNTIME</button>
           <button id="comphdl_start" onClick="runGui()">RUN!</button>
         </div>
-        List all the slime chunks in the green text area, and all the non slime chunks
-        in the red text area.
-        <div>
-          <textarea id="chunks" class="code" rows="20"></textarea>
-          <textarea id="no_chunks" class="code" rows="20"></textarea>
-          <textarea id="output_textarea" class="code" rows="20" readonly>Found 48-bit seeds will appear here.</textarea>
         </div>
-        <textarea id="num_candidates" class="code" rows="1" readonly></textarea>
 
+        <div style="clear: both;"></div>
         <div>
           <br>
           Once you have found the lower 48 bits of the seed, you can find the full 64 bit seed by
@@ -53,8 +61,10 @@
                 var myWorker = new Worker("worker.js");
             }
             function runGui() {
-                    var chunks = document.getElementById('chunks').value;
-                    var no_chunks = document.getElementById('no_chunks').value;
+                    var seltextarea = document.getElementById('selection_output');
+                    var s = JSON.parse(seltextarea.value);
+                    var chunks = s.slime_chunks;
+                    var no_chunks = s.slime_chunks_not;
                     var outta = document.getElementById('output_textarea');
                     outta.value = "Calculating...";
                     if (window.Worker) {
@@ -75,19 +85,18 @@
             }
 
             // Count candidates
-            Rust.wasm_gui.then( function( wasmgui ) {
-                var chunks = document.getElementById('chunks');
-                var no_chunks = document.getElementById('no_chunks');
-                var outta = document.getElementById('num_candidates');
-                chunks.addEventListener( "keyup", function( event ) {
-                    outta.value = wasmgui.count_candidates({ chunks: chunks.value, no_chunks: no_chunks.value });
+            function countCandidates() {
+                Rust.wasm_gui.then( function( wasmgui ) {
+                    var outta = document.getElementById('num_candidates');
+                    var seltextarea = document.getElementById('selection_output');
+                    var s = JSON.parse(seltextarea.value);
+                    var chunks = s.slime_chunks;
+                    var no_chunks = s.slime_chunks_not;
+                    outta.value = wasmgui.count_candidates({ chunks: chunks, no_chunks: no_chunks});
+                }, function( err ) {
+                    console.err(err);
                 });
-                no_chunks.addEventListener( "keyup", function( event ) {
-                    outta.value = wasmgui.count_candidates({ chunks: chunks.value, no_chunks: no_chunks.value });
-                });
-            }, function( err ) {
-                console.err(err);
-            });
+            }
 
             // Extend 48
             Rust.wasm_gui.then( function( wasmgui ) {
