--- a/static/biomes.html
+++ b/static/biomes.html
@@ -35,6 +35,7 @@
                 <input id="center_z" size=6 value="0">
                 <button id="center_button">CENTER</button>
                 <input type="range" min="0" max="10" value="10" class="slider" id="gridSize">
+                <button onClick="Game.showGrid = false">GRID OFF</button>
             </div>
         </div>
 
