Try to support generic canvas size

--- a/static/biomes.html
+++ b/static/biomes.html
@@ -140,6 +140,7 @@
 
             const work1 = new Wrapper();
 
+            var FRAG_SIZE = 256;
             // Generate fragment
             // This function should return a promise, which is interpreted as
             // a HTML canvas
