console.err is not a function

--- a/static/biomes.html
+++ b/static/biomes.html
@@ -64,7 +64,7 @@
                             Game.clear();
                         }
                     }, function( err ) {
-                        console.err(err);
+                        console.error(err);
                     });
                 }
             }
@@ -192,7 +192,7 @@
                         ctx.putImageData(imageData, 0, 0);
                         return c;
                     }, function( err ) {
-                        console.err(err);
+                        console.error(err);
                     });
                 }
             }
