--- a/static/slime_map.html
+++ b/static/slime_map.html
@@ -182,7 +182,7 @@
                         ctx.putImageData(imageData, 0, 0);
                         return c;
                     }, function( err ) {
-                        console.err(err);
+                        console.error(err);
                     });
                 }
             }
@@ -200,7 +200,7 @@
                     var ws = document.getElementById('worldSeed');
                     ws.value = new_value;
                 }, function( err ) {
-                    console.err(err);
+                    console.error(err);
                 });
             }
         </script>
